change region return acces key

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
       - name: default deploy
         uses: appleboy/lambda-action@master
         with:
-          aws_access_key_id: 'AKIAVIIFOUVTJKM74GVV'
-          aws_secret_access_key: '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'
-          aws_region: eu-west-1
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_region: us-east-1
           function_name: my-function
           zip_file: bundle.zip
